Traducido archivo distutils/sourcedist

--- a/distutils/sourcedist.po
+++ b/distutils/sourcedist.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-11-26 14:38+0100\n"
+"PO-Revision-Date: 2022-10-29 14:31-0500\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/distutils/sourcedist.rst:5
 msgid "Creating a Source Distribution"
@@ -31,10 +32,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
-"Este documento se conserva únicamente hasta que la documentación de "
+"Este documento se mantiene únicamente hasta que la documentación de "
 "``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
-"html cubra de forma independiente toda la información relevante que se "
-"incluye actualmente aquí."
+"html cubra de forma independiente toda la información relevante actualmente "
+"incluida aquí."
 
 #: ../Doc/distutils/sourcedist.rst:9
 msgid ""
@@ -118,9 +119,8 @@ msgstr "archivo tar comprimido con bzip2 (:file:`.tar.bz2`)"
 
 #: ../Doc/distutils/sourcedist.rst:34 ../Doc/distutils/sourcedist.rst:37
 #: ../Doc/distutils/sourcedist.rst:43
-#, fuzzy
 msgid "\\(5)"
-msgstr "\\(4)"
+msgstr "\\(5)"
 
 #: ../Doc/distutils/sourcedist.rst:37
 msgid "``xztar``"
@@ -139,9 +139,8 @@ msgid "compressed tar file (:file:`.tar.Z`)"
 msgstr "archivo tar comprimido (:file:`.tar.Z`)"
 
 #: ../Doc/distutils/sourcedist.rst:40
-#, fuzzy
 msgid "(4),(5)"
-msgstr "(1),(3)"
+msgstr "(4),(5)"
 
 #: ../Doc/distutils/sourcedist.rst:43
 msgid "``tar``"
@@ -188,6 +187,8 @@ msgid ""
 "deprecated by `PEP 527 <https://peps.python.org/pep-0527/>`_; `PyPI <https://"
 "pypi.org>`_ only accepts ``.zip`` and ``.tar.gz`` files."
 msgstr ""
+"deprecado por `PEP 527 <https://peps.python.org/pep-0527/>`_; `PyPI <https://"
+"pypi.org>`_ solo acepta archivos ``.zip`` y ``.tar.gz``."
 
 #: ../Doc/distutils/sourcedist.rst:68
 msgid ""
