--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -4,19 +4,20 @@
 # package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python en Español 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2022-10-29 22:32-0300\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/whatsnew/3.9.rst:3
 msgid "What's New In Python 3.9"
@@ -47,7 +48,6 @@ msgid "Łukasz Langa"
 msgstr "Łukasz Langa"
 
 #: ../Doc/whatsnew/3.9.rst:47
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 3.9, compared to 3.8. "
 "Python 3.9 was released on October 5, 2020."
@@ -944,7 +944,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.9.rst:487
 msgid "New in 3.9 maintenance releases"
-msgstr ""
+msgstr "Novedades de la versión de mantenimiento 3.9"
 
 #: ../Doc/whatsnew/3.9.rst:489
 msgid ""
@@ -952,6 +952,9 @@ msgid ""
 "hooks were previously ignored.  (Contributed by Ken Hilton in :issue:"
 "`43008`.)"
 msgstr ""
+"Hacer que IDLE invoque :func:`sys.excepthook` (cuando se inicia sin '-n'). "
+"Anteriormente se ignoraban los hooks de usuario.  (Contribuido por Ken "
+"Hilton en :issue:`43008`.)"
 
 #: ../Doc/whatsnew/3.9.rst:493
 msgid "The changes above have been backported to 3.8 maintenance releases."
@@ -969,12 +972,21 @@ msgid ""
 "Windows tab.  (Contributed by Mark Roseman and Terry Jan Reedy in :issue:"
 "`33962`.)"
 msgstr ""
+"Reorganizar el diálogo de configuración. Dividir la pestaña General en "
+"Windows y Shell/Ed. Mover las fuentes de ayuda, que amplían el menú Ayuda, a "
+"la pestaña Extensiones. Hacer espacio para nuevas opciones y acortar el "
+"diálogo. Esto último hace que el diálogo se adapte mejor a las pantallas "
+"pequeñas. (Contribuido por Terry Jan Reedy en :issue:`40468`.) Mover la "
+"configuración del espacio de sangría de la pestaña Fuente a la nueva pestaña "
+"Windows. (Contribuido por Mark Roseman y Terry Jan Reedy en :issue:`33962`.)"
 
 #: ../Doc/whatsnew/3.9.rst:503
 msgid ""
 "Apply syntax highlighting to ``.pyi`` files. (Contributed by Alex Waygood "
 "and Terry Jan Reedy in :issue:`45447`.)"
 msgstr ""
+"Aplicar el resaltado de sintaxis a los archivos ``.pyi``. (Contribución de "
+"Alex Waygood y Terry Jan Reedy en :issue:`45447`)"
 
 #: ../Doc/whatsnew/3.9.rst:507
 msgid "imaplib"
@@ -1373,7 +1385,6 @@ msgid "time"
 msgstr "tiempo"
 
 #: ../Doc/whatsnew/3.9.rst:689
-#, fuzzy
 msgid ""
 "On AIX, :func:`~time.thread_time` is now implemented with "
 "``thread_cputime()`` which has nanosecond resolution, rather than "
@@ -1561,13 +1572,12 @@ msgstr ""
 "Stinner en :issue:`38061`.)"
 
 #: ../Doc/whatsnew/3.9.rst:775
-#, fuzzy
 msgid ""
 ":c:func:`PyLong_FromDouble` is now up to 1.87x faster for values that fit "
 "into :c:expr:`long`. (Contributed by Sergey Fedoseev in :issue:`37986`.)"
 msgstr ""
 ":c:func:`PyLong_FromDouble` ahora es hasta 1,87 veces más rápido para "
-"valores que se ajustan a :c:type:`long`. (Contribuido por Sergey Fedoseev "
+"valores que se ajustan a :c:expr:`long`. (Contribuido por Sergey Fedoseev "
 "en :issue:`37986`.)"
 
 #: ../Doc/whatsnew/3.9.rst:779
@@ -2317,8 +2327,8 @@ msgstr ""
 ":func:`codecs.lookup` ahora normaliza el nombre de codificación de la misma "
 "manera que :func:`encodings.normalize_encoding`, excepto que :func:`codecs."
 "lookup` también convierte el nombre a minúsculas. Por ejemplo, el nombre de "
-"codificación ``\"latex+latin1\"`` ahora está normalizado a "
-"``\"latex_latin1\"``. (Contribuido por Jordon Xu en :issue:`37751`.)"
+"codificación ``\"latex+latin1\"`` ahora está normalizado a ``"
+"\"latex_latin1\"``. (Contribuido por Jordon Xu en :issue:`37751`.)"
 
 #: ../Doc/whatsnew/3.9.rst:1154
 msgid "Changes in the C API"
@@ -2336,8 +2346,8 @@ msgid ""
 msgstr ""
 "Las instancias de :ref:`heap-allocated types <heap-types>` (como las creadas "
 "con :c:func:`PyType_FromSpec` y API similares) contienen una referencia a su "
-"objeto de tipo desde Python 3.8. Como se indica en los \"Cambios en la API "
-"C\" de Python 3.8, para la gran mayoría de los casos, no debería haber "
+"objeto de tipo desde Python 3.8. Como se indica en los \"Cambios en la API C"
+"\" de Python 3.8, para la gran mayoría de los casos, no debería haber "
 "efectos secundarios, pero para los tipos que tienen una función "
 "personalizada :c:member:`~PyTypeObject.tp_traverse`, asegúrese de que todas "
 "las funciones ``tp_traverse`` personalizadas de los tipos asignados al "
@@ -2472,7 +2482,6 @@ msgstr ""
 "`10945` para obtener más detalles)."
 
 #: ../Doc/whatsnew/3.9.rst:1246
-#, fuzzy
 msgid ""
 "When building Python on macOS from source, ``_tkinter`` now links with non-"
 "system Tcl and Tk frameworks if they are installed in ``/Library/"
@@ -2487,8 +2496,8 @@ msgstr ""
 "Frameworks``, como había sido el caso en versiones anteriores de macOS. Si "
 "un SDK de macOS está configurado explícitamente, mediante :option:`--enable-"
 "universalsdk` o ``-isysroot``, solo se busca en el SDK. El comportamiento "
-"predeterminado aún se puede anular con :option:`--with-tcltk-includes` y :"
-"option:`--with-tcltk-libs`. (Contribuido por Ned Deily en :issue:`34956`.)"
+"predeterminado aún se puede anular con `--with-tcltk-includes` y `--with-"
+"tcltk-libs`. (Contribuido por Ned Deily en :issue:`34956`.)"
 
 #: ../Doc/whatsnew/3.9.rst:1255
 msgid ""
