Traducido archivo c-api/tuple

--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-12-09 10:31+0800\n"
+"PO-Revision-Date: 2022-10-29 23:58-0400\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/tuple.rst:6
 msgid "Tuple Objects"
@@ -134,13 +135,12 @@ msgstr ""
 "de errores, y debe *solo* usarse para completar tuplas nuevas."
 
 #: ../Doc/c-api/tuple.rst:94
-#, fuzzy
 msgid ""
 "This function \"steals\" a reference to *o*, and, unlike :c:func:"
 "`PyTuple_SetItem`, does *not* discard a reference to any item that is being "
 "replaced; any reference in the tuple at position *pos* will be leaked."
 msgstr ""
-"Este macro \"roba\" una referencia a *o* y, a diferencia de :c:func:"
+"Este función \"roba\" una referencia a *o* y, a diferencia de :c:func:"
 "`PyTuple_SetItem`, *no* descarta una referencia a ningún elemento que se "
 "está reemplazando; cualquier referencia en la tupla en la posición *pos* se "
 "filtrará."
@@ -277,7 +277,6 @@ msgstr ""
 "cantidad de campos visibles para el lado de Python (si se usa como tupla)"
 
 #: ../Doc/c-api/tuple.rst:163
-#, fuzzy
 msgid ""
 "Describes a field of a struct sequence. As a struct sequence is modeled as a "
 "tuple, all fields are typed as :c:expr:`PyObject*`.  The index in the :attr:"
@@ -286,7 +285,7 @@ msgid ""
 msgstr ""
 "Describe un campo de una secuencia de estructura. Como una secuencia de "
 "estructura se modela como una tupla, todos los campos se escriben como :c:"
-"type:`PyObject*`. El índice en el arreglo :attr:`fields` de :c:type:"
+"type:`PyObject*`. El índice en el array :attr:`fields` de :c:type:"
 "`PyStructSequence_Desc` determina qué campo de la secuencia de estructura se "
 "describe."
 
@@ -350,6 +349,8 @@ msgid ""
 "Similar to :c:func:`PyStructSequence_SetItem`, but implemented as a static "
 "inlined function."
 msgstr ""
+"Similar a :c:func:`PyStructSequence_SetItem`, pero implementada como una "
+"función estática inline."
 
 #~ msgid "Macro equivalent of :c:func:`PyStructSequence_SetItem`."
 #~ msgstr "Macro equivalente de :c:func:`PyStructSequence_SetItem`."
