--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -3805,6 +3805,13 @@ msgid ""
 "distribution at `Tools/scripts/h2py.py <https://github.com/python/cpython/"
 "blob/v3.6.15/Tools/scripts/h2py.py>`_."
 msgstr ""
+"Los módulos indocumentados ``IN``, ``CDROM``, ``DLFCN``, ``TYPES``, ``CDIO`` "
+"y ``STROPTS`` se han eliminado. Habían estado disponibles en los directorios "
+"``Lib/plat-*/`` específicos de la plataforma, pero estaban desactualizados "
+"de forma crónica, estaban disponibles de manera incoherente en todas las "
+"plataformas y no se mantenían. El script que creó estos módulos todavía está "
+"disponible en la distribución fuente en: source: `Tools / scripts / h2py.py "
+"<https://github.com/python/cpython/blob/v3.6.15/Tools/scripts/h2py.py>`_."
 
 #: ../Doc/whatsnew/3.6.rst:2123
 msgid "The deprecated ``asynchat.fifo`` class has been removed."
@@ -4505,19 +4512,3 @@ msgstr ""
 "que utilizan las funciones afectadas internamente. Para obtener más "
 "detalles, consulte su documentación respectiva. (Contribuido por Adam "
 "Goldschmidt, Senthil Kumaran y Ken Jin en :issue:`42967`.)"
-
-#~ msgid ""
-#~ "The undocumented ``IN``, ``CDROM``, ``DLFCN``, ``TYPES``, ``CDIO``, and "
-#~ "``STROPTS`` modules have been removed.  They had been available in the "
-#~ "platform specific ``Lib/plat-*/`` directories, but were chronically out "
-#~ "of date, inconsistently available across platforms, and unmaintained.  "
-#~ "The script that created these modules is still available in the source "
-#~ "distribution at :source:`Tools/scripts/h2py.py`."
-#~ msgstr ""
-#~ "Los módulos indocumentados ``IN``, ``CDROM``, ``DLFCN``, ``TYPES``, "
-#~ "``CDIO`` y ``STROPTS`` se han eliminado. Habían estado disponibles en los "
-#~ "directorios ``Lib/plat-*/`` específicos de la plataforma, pero estaban "
-#~ "desactualizados de forma crónica, estaban disponibles de manera "
-#~ "incoherente en todas las plataformas y no se mantenían. El script que "
-#~ "creó estos módulos todavía está disponible en la distribución fuente en: "
-#~ "source: `Tools / scripts / h2py.py`."
