--- a/c-api/code.po
+++ b/c-api/code.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-16 13:04+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-30 12:49-0300\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/code.rst:8
 msgid "Code Objects"
@@ -132,6 +133,10 @@ msgid ""
 "for the instruction at ``byte_offset``. Sets the value to ``0`` when "
 "information is not available for any particular element."
 msgstr ""
+"Establece los punteros ``int`` pasados en los números de línea y columna del "
+"código fuente para las instrucciones en ``byte_offset``. Establece el valor "
+"en ``0`` cuando la información no está disponible para algún elemento en "
+"particular."
 
 #: ../Doc/c-api/code.rst:78
 msgid "Returns ``1`` if the function succeeds and 0 otherwise."
