--- a/c-api/code.po
+++ b/c-api/code.po
@@ -140,7 +140,7 @@ msgstr ""
 
 #: ../Doc/c-api/code.rst:78
 msgid "Returns ``1`` if the function succeeds and 0 otherwise."
-msgstr ""
+msgstr "Retorna ``1`` si la función fue exitosa y ``0`` de lo contrario."
 
 #: ../Doc/c-api/code.rst:82
 msgid ""
@@ -148,6 +148,10 @@ msgid ""
 "reference to a :c:type:`PyBytesObject` representing the bytecode in a code "
 "object. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_code')``. Retorna una "
+"referencia fuerte a un :c:type:`PyBytesObject` representando el *bytecode* "
+"en un objecto código. En caso de error se retorna ``NULL`` y se lanza una "
+"excepción."
 
 #: ../Doc/c-api/code.rst:87
 msgid ""
