--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -2327,8 +2327,8 @@ msgstr ""
 ":func:`codecs.lookup` ahora normaliza el nombre de codificación de la misma "
 "manera que :func:`encodings.normalize_encoding`, excepto que :func:`codecs."
 "lookup` también convierte el nombre a minúsculas. Por ejemplo, el nombre de "
-"codificación ``\"latex+latin1\"`` ahora está normalizado a ``"
-"\"latex_latin1\"``. (Contribuido por Jordon Xu en :issue:`37751`.)"
+"codificación ``\"latex+latin1\"`` ahora está normalizado a "
+"``\"latex_latin1\"``. (Contribuido por Jordon Xu en :issue:`37751`.)"
 
 #: ../Doc/whatsnew/3.9.rst:1154
 msgid "Changes in the C API"
@@ -2346,8 +2346,8 @@ msgid ""
 msgstr ""
 "Las instancias de :ref:`heap-allocated types <heap-types>` (como las creadas "
 "con :c:func:`PyType_FromSpec` y API similares) contienen una referencia a su "
-"objeto de tipo desde Python 3.8. Como se indica en los \"Cambios en la API C"
-"\" de Python 3.8, para la gran mayoría de los casos, no debería haber "
+"objeto de tipo desde Python 3.8. Como se indica en los \"Cambios en la API "
+"C\" de Python 3.8, para la gran mayoría de los casos, no debería haber "
 "efectos secundarios, pero para los tipos que tienen una función "
 "personalizada :c:member:`~PyTypeObject.tp_traverse`, asegúrese de que todas "
 "las funciones ``tp_traverse`` personalizadas de los tipos asignados al "
