--- a/c-api/code.po
+++ b/c-api/code.po
@@ -159,6 +159,10 @@ msgid ""
 "not necessarily represent the bytecode actually executed by CPython. The "
 "primary use case for this function is debuggers and profilers."
 msgstr ""
+"Este ``PyBytesObject`` puede ser creado a pedido del intérprete y no "
+"necesariamente representa el *bytecode* que es realmente ejecutado por "
+"CPython. Los casos de uso principales para esta función son depuradores y "
+"perfiladores."
 
 #: ../Doc/c-api/code.rst:95
 msgid ""
