--- a/c-api/code.po
+++ b/c-api/code.po
@@ -170,6 +170,10 @@ msgid ""
 "reference to a :c:type:`PyTupleObject` containing the names of the local "
 "variables. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_varnames')``. Retorna una "
+"nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
+"las variables locales. En caso de error, retorna ``NULL`` y lanza una "
+"excepción."
 
 #: ../Doc/c-api/code.rst:104
 msgid ""
@@ -178,6 +182,10 @@ msgid ""
 "variables that are referenced by nested functions. On error, ``NULL`` is "
 "returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_cellvars')``. Retorna una "
+"nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
+"las variables locales referenciadas por funciones anidadas. En caso de error, "
+"retorna ``NULL`` y lanza una excepción."
 
 #: ../Doc/c-api/code.rst:113
 msgid ""
@@ -185,3 +193,6 @@ msgid ""
 "reference to a :c:type:`PyTupleObject` containing the names of the free "
 "variables. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_freevars')``. Retorna una "
+"nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
+"las variables libres. En caso de error, retorna ``NULL`` y lanza una excepción."
