--- a/c-api/code.po
+++ b/c-api/code.po
@@ -184,8 +184,8 @@ msgid ""
 msgstr ""
 "Equivalente al código Python ``getattr(co, 'co_cellvars')``. Retorna una "
 "nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
-"las variables locales referenciadas por funciones anidadas. En caso de error, "
-"retorna ``NULL`` y lanza una excepción."
+"las variables locales referenciadas por funciones anidadas. En caso de "
+"error, retorna ``NULL`` y lanza una excepción."
 
 #: ../Doc/c-api/code.rst:113
 msgid ""
@@ -195,4 +195,5 @@ msgid ""
 msgstr ""
 "Equivalente al código Python ``getattr(co, 'co_freevars')``. Retorna una "
 "nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
-"las variables libres. En caso de error, retorna ``NULL`` y lanza una excepción."
+"las variables libres. En caso de error, retorna ``NULL`` y lanza una "
+"excepción."
