add italics to bytecode in msg 87
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/code.po
+++ b/c-api/code.po
@@ -160,7 +160,7 @@ msgid ""
 "primary use case for this function is debuggers and profilers."
 msgstr ""
 "Este ``PyBytesObject`` puede ser creado a pedido del intérprete y no "
-"necesariamente representa el *bytecode* que es realmente ejecutado por "
+"necesariamente representa el bytecode que es realmente ejecutado por "
 "CPython. Los casos de uso principales para esta función son depuradores y "
 "perfiladores."
 
