add italics to bytecode in msg 82
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/code.po
+++ b/c-api/code.po
@@ -149,7 +149,7 @@ msgid ""
 "object. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
 "Equivalente al código Python ``getattr(co, 'co_code')``. Retorna una "
-"referencia fuerte a un :c:type:`PyBytesObject` representando el *bytecode* "
+"referencia fuerte a un :c:type:`PyBytesObject` representando el bytecode "
 "en un objecto código. En caso de error se retorna ``NULL`` y se lanza una "
 "excepción."
 
