--- a/c-api/code.po
+++ b/c-api/code.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-10-30 12:49-0300\n"
+"PO-Revision-Date: 2022-10-30 17:20-0300\n"
 "Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -65,7 +65,6 @@ msgid "Return the number of free variables in *co*."
 msgstr "Retorna el número de variables libres en *co*."
 
 #: ../Doc/c-api/code.rst:38
-#, fuzzy
 msgid ""
 "Return a new code object.  If you need a dummy code object to create a "
 "frame, use :c:func:`PyCode_NewEmpty` instead.  Calling :c:func:`PyCode_New` "
@@ -75,36 +74,38 @@ msgid ""
 "to result in incorrect execution or VM crashes. Use this function only with "
 "extreme care."
 msgstr ""
-"Retorna un nuevo objeto de código. Si necesita un objeto de código ficticio "
-"para crear un marco (*frame*), use :c:func:`PyCode_NewEmpty` en su lugar. "
-"Llamando :c:func:`PyCode_New` directamente puede enlazarlo a una versión "
-"precisa de Python ya que la definición del código de bytes cambia a menudo."
+"Retorna un nuevo objeto de código. Si se necesita un objeto de código "
+"ficticio para crear un marco (*frame*), usar :c:func:`PyCode_NewEmpty` en su "
+"lugar. Llamando :c:func:`PyCode_New` directamente puede enlazarlo a una "
+"versión precisa de Python ya que la definición del código de bytes cambia a "
+"menudo. Muchos de los argumentos de esta función están relacionados "
+"mutuamente de formas complejas, lo cual significa que cambios sutiles en "
+"estos valores probablemente resulten en ejecuciones incorrectas o fallas en "
+"la VM."
 
 #: ../Doc/c-api/code.rst:45 ../Doc/c-api/code.rst:55
 msgid "Added ``exceptiontable`` parameter."
-msgstr ""
+msgstr "Se agregó el parámetro ``exceptiontable``."
 
 #: ../Doc/c-api/code.rst:50
-#, fuzzy
 msgid ""
 "Similar to :c:func:`PyCode_New`, but with an extra \"posonlyargcount\" for "
 "positional-only arguments. The same caveats that apply to ``PyCode_New`` "
 "also apply to this function."
 msgstr ""
 "Similar a :c:func:`PyCode_New`, pero con un \"*posonlyargcount*\" adicional "
-"para argumentos solo posicionales."
+"para argumentos solo posicionales. Las mismas advertencias que aplican a "
+"``PyCode_New`` también aplican a esta función."
 
 #: ../Doc/c-api/code.rst:60
-#, fuzzy
 msgid ""
 "Return a new empty code object with the specified filename, function name, "
 "and first line number. The resulting code object will raise an ``Exception`` "
 "if executed."
 msgstr ""
 "Retorna un nuevo objeto de código vacío con el nombre de archivo "
-"especificado, el nombre de la función y el número de la primera línea. Es "
-"ilegal utilizar :func:`exec` o :func:`eval` en el objeto de código "
-"resultante."
+"especificado, el nombre de la función y el número de la primera línea. Si el "
+"objeto código resultante es ejecutado, lanzará una ``Exception``."
 
 #: ../Doc/c-api/code.rst:66
 msgid ""
@@ -117,15 +118,14 @@ msgstr ""
 "un marco, use :c:func:`PyFrame_GetLineNumber` en su lugar."
 
 #: ../Doc/c-api/code.rst:69
-#, fuzzy
 msgid ""
 "For efficiently iterating over the line numbers in a code object, use `the "
 "API described in PEP 626 <https://peps.python.org/pep-0626/#out-of-process-"
 "debuggers-and-profilers>`_."
 msgstr ""
 "Para iterar de manera eficiente sobre los números de línea en un objeto de "
-"código, use `la API descrita en PEP 626 <https://www.python.org/dev/peps/"
-"pep-0626/#out-of-process-debuggers-and-profilers>`_."
+"código, use `la API descrita en PEP 626 <https://peps.python.org/pep-0626/"
+"#out-of-process-debuggers-and-profilers>`_."
 
 #: ../Doc/c-api/code.rst:74
 msgid ""
@@ -149,8 +149,8 @@ msgid ""
 "object. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
 "Equivalente al código Python ``getattr(co, 'co_code')``. Retorna una "
-"referencia fuerte a un :c:type:`PyBytesObject` representando el bytecode "
-"en un objecto código. En caso de error se retorna ``NULL`` y se lanza una "
+"referencia fuerte a un :c:type:`PyBytesObject` representando el bytecode en "
+"un objecto código. En caso de error se retorna ``NULL`` y se lanza una "
 "excepción."
 
 #: ../Doc/c-api/code.rst:87
