Translate c-api/code (#2121)
Closes #2066

Co-authored-by: Sofia Denner <sofia.denner@mercadolibre.com>
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/code.po
+++ b/c-api/code.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-16 13:04+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-30 17:20-0300\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/code.rst:8
 msgid "Code Objects"
@@ -64,7 +65,6 @@ msgid "Return the number of free variables in *co*."
 msgstr "Retorna el número de variables libres en *co*."
 
 #: ../Doc/c-api/code.rst:38
-#, fuzzy
 msgid ""
 "Return a new code object.  If you need a dummy code object to create a "
 "frame, use :c:func:`PyCode_NewEmpty` instead.  Calling :c:func:`PyCode_New` "
@@ -74,36 +74,38 @@ msgid ""
 "to result in incorrect execution or VM crashes. Use this function only with "
 "extreme care."
 msgstr ""
-"Retorna un nuevo objeto de código. Si necesita un objeto de código ficticio "
-"para crear un marco (*frame*), use :c:func:`PyCode_NewEmpty` en su lugar. "
-"Llamando :c:func:`PyCode_New` directamente puede enlazarlo a una versión "
-"precisa de Python ya que la definición del código de bytes cambia a menudo."
+"Retorna un nuevo objeto de código. Si se necesita un objeto de código "
+"ficticio para crear un marco (*frame*), usar :c:func:`PyCode_NewEmpty` en su "
+"lugar. Llamando :c:func:`PyCode_New` directamente puede enlazarlo a una "
+"versión precisa de Python ya que la definición del código de bytes cambia a "
+"menudo. Muchos de los argumentos de esta función están relacionados "
+"mutuamente de formas complejas, lo cual significa que cambios sutiles en "
+"estos valores probablemente resulten en ejecuciones incorrectas o fallas en "
+"la VM."
 
 #: ../Doc/c-api/code.rst:45 ../Doc/c-api/code.rst:55
 msgid "Added ``exceptiontable`` parameter."
-msgstr ""
+msgstr "Se agregó el parámetro ``exceptiontable``."
 
 #: ../Doc/c-api/code.rst:50
-#, fuzzy
 msgid ""
 "Similar to :c:func:`PyCode_New`, but with an extra \"posonlyargcount\" for "
 "positional-only arguments. The same caveats that apply to ``PyCode_New`` "
 "also apply to this function."
 msgstr ""
 "Similar a :c:func:`PyCode_New`, pero con un \"*posonlyargcount*\" adicional "
-"para argumentos solo posicionales."
+"para argumentos solo posicionales. Las mismas advertencias que aplican a "
+"``PyCode_New`` también aplican a esta función."
 
 #: ../Doc/c-api/code.rst:60
-#, fuzzy
 msgid ""
 "Return a new empty code object with the specified filename, function name, "
 "and first line number. The resulting code object will raise an ``Exception`` "
 "if executed."
 msgstr ""
 "Retorna un nuevo objeto de código vacío con el nombre de archivo "
-"especificado, el nombre de la función y el número de la primera línea. Es "
-"ilegal utilizar :func:`exec` o :func:`eval` en el objeto de código "
-"resultante."
+"especificado, el nombre de la función y el número de la primera línea. Si el "
+"objeto código resultante es ejecutado, lanzará una ``Exception``."
 
 #: ../Doc/c-api/code.rst:66
 msgid ""
@@ -116,15 +118,14 @@ msgstr ""
 "un marco, use :c:func:`PyFrame_GetLineNumber` en su lugar."
 
 #: ../Doc/c-api/code.rst:69
-#, fuzzy
 msgid ""
 "For efficiently iterating over the line numbers in a code object, use `the "
 "API described in PEP 626 <https://peps.python.org/pep-0626/#out-of-process-"
 "debuggers-and-profilers>`_."
 msgstr ""
 "Para iterar de manera eficiente sobre los números de línea en un objeto de "
-"código, use `la API descrita en PEP 626 <https://www.python.org/dev/peps/"
-"pep-0626/#out-of-process-debuggers-and-profilers>`_."
+"código, use `la API descrita en PEP 626 <https://peps.python.org/pep-0626/"
+"#out-of-process-debuggers-and-profilers>`_."
 
 #: ../Doc/c-api/code.rst:74
 msgid ""
@@ -132,10 +133,14 @@ msgid ""
 "for the instruction at ``byte_offset``. Sets the value to ``0`` when "
 "information is not available for any particular element."
 msgstr ""
+"Establece los punteros ``int`` pasados en los números de línea y columna del "
+"código fuente para las instrucciones en ``byte_offset``. Establece el valor "
+"en ``0`` cuando la información no está disponible para algún elemento en "
+"particular."
 
 #: ../Doc/c-api/code.rst:78
 msgid "Returns ``1`` if the function succeeds and 0 otherwise."
-msgstr ""
+msgstr "Retorna ``1`` si la función fue exitosa y ``0`` de lo contrario."
 
 #: ../Doc/c-api/code.rst:82
 msgid ""
@@ -143,6 +148,10 @@ msgid ""
 "reference to a :c:type:`PyBytesObject` representing the bytecode in a code "
 "object. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_code')``. Retorna una "
+"referencia fuerte a un :c:type:`PyBytesObject` representando el bytecode en "
+"un objecto código. En caso de error se retorna ``NULL`` y se lanza una "
+"excepción."
 
 #: ../Doc/c-api/code.rst:87
 msgid ""
@@ -150,6 +159,10 @@ msgid ""
 "not necessarily represent the bytecode actually executed by CPython. The "
 "primary use case for this function is debuggers and profilers."
 msgstr ""
+"Este ``PyBytesObject`` puede ser creado a pedido del intérprete y no "
+"necesariamente representa el bytecode que es realmente ejecutado por "
+"CPython. Los casos de uso principales para esta función son depuradores y "
+"perfiladores."
 
 #: ../Doc/c-api/code.rst:95
 msgid ""
@@ -157,6 +170,10 @@ msgid ""
 "reference to a :c:type:`PyTupleObject` containing the names of the local "
 "variables. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_varnames')``. Retorna una "
+"nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
+"las variables locales. En caso de error, retorna ``NULL`` y lanza una "
+"excepción."
 
 #: ../Doc/c-api/code.rst:104
 msgid ""
@@ -165,6 +182,10 @@ msgid ""
 "variables that are referenced by nested functions. On error, ``NULL`` is "
 "returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_cellvars')``. Retorna una "
+"nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
+"las variables locales referenciadas por funciones anidadas. En caso de "
+"error, retorna ``NULL`` y lanza una excepción."
 
 #: ../Doc/c-api/code.rst:113
 msgid ""
@@ -172,3 +193,7 @@ msgid ""
 "reference to a :c:type:`PyTupleObject` containing the names of the free "
 "variables. On error, ``NULL`` is returned and an exception is raised."
 msgstr ""
+"Equivalente al código Python ``getattr(co, 'co_freevars')``. Retorna una "
+"nueva referencia a un :c:type:`PyTupleObject` que contiene los nombres de "
+"las variables libres. En caso de error, retorna ``NULL`` y lanza una "
+"excepción."
