Add missing notation

--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-10-30 22:50-0300\n"
+"PO-Revision-Date: 2022-10-30 23:02-0300\n"
 "Last-Translator: Marco Richetta <marcorichetta@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -763,9 +763,10 @@ msgid ""
 msgstr ""
 "Recupera la información de excepción, como se conoce de :func:`sys."
 "exc_info`.  Esto se refiere a una excepción que *ya fue capturada*, no a una "
-"excepción que se planteó recientemente.  Retorna nuevas referencias para los "
-"tres objetos, cualquiera de los cuales puede ser ``NULL``.  No modifica el "
-"estado de información de excepción."
+"excepción que fue lanzada recientemente.  Retorna nuevas referencias para "
+"los tres objetos, cualquiera de los cuales puede ser ``NULL``.  No modifica "
+"el estado de información de excepción.  Esta función se mantiene por retro-"
+"compatibilidad. Es preferible usar :c:func:`PyErr_GetHandledException`."
 
 #: ../Doc/c-api/exceptions.rst:506
 msgid ""
