--- a/c-api/capsule.po
+++ b/c-api/capsule.po
@@ -44,7 +44,7 @@ msgid ""
 msgstr ""
 "Este subtipo de :c:type:`PyObject` representa un valor opaco, útil para los "
 "módulos de extensión C que necesitan pasar un valor opaco (como un puntero :"
-"c:type:`void*`) a través del código Python a otro código C . A menudo se usa "
+"c:expr:`void*`) a través del código Python a otro código C . A menudo se usa "
 "para hacer que un puntero de función C definido en un módulo esté disponible "
 "para otros módulos, por lo que el mecanismo de importación regular se puede "
 "usar para acceder a las API C definidas en módulos cargados dinámicamente."
