update translations for c-api/capsule (#2122)
Closes #2061

Co-authored-by: Sofia Denner <sofia.denner@mercadolibre.com>

--- a/c-api/capsule.po
+++ b/c-api/capsule.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-01 20:17+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-30 16:51-0300\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/capsule.rst:6
 msgid "Capsules"
@@ -33,7 +34,6 @@ msgstr ""
 "estos objetos."
 
 #: ../Doc/c-api/capsule.rst:17
-#, fuzzy
 msgid ""
 "This subtype of :c:type:`PyObject` represents an opaque value, useful for C "
 "extension modules who need to pass an opaque value (as a :c:expr:`void*` "
@@ -44,7 +44,7 @@ msgid ""
 msgstr ""
 "Este subtipo de :c:type:`PyObject` representa un valor opaco, útil para los "
 "módulos de extensión C que necesitan pasar un valor opaco (como un puntero :"
-"c:type:`void*`) a través del código Python a otro código C . A menudo se usa "
+"c:expr:`void*`) a través del código Python a otro código C . A menudo se usa "
 "para hacer que un puntero de función C definido en un módulo esté disponible "
 "para otros módulos, por lo que el mecanismo de importación regular se puede "
 "usar para acceder a las API C definidas en módulos cargados dinámicamente."
@@ -186,7 +186,6 @@ msgstr ""
 "func:`PyErr_Occurred` para desambiguar."
 
 #: ../Doc/c-api/capsule.rst:103
-#, fuzzy
 msgid ""
 "Import a pointer to a C object from a capsule attribute in a module.  The "
 "*name* parameter should specify the full name to the attribute, as in "
@@ -196,10 +195,7 @@ msgstr ""
 "Importa un puntero a un objeto C desde un atributo cápsula en un módulo. El "
 "parámetro *name* debe especificar el nombre completo del atributo, como en "
 "``module.attribute``. El nombre *name* almacenado en la cápsula debe "
-"coincidir exactamente con esta cadena de caracteres. Si *no_block* es "
-"verdadero, importa el módulo sin bloquear (usando :c:func:"
-"`PyImport_ImportModuleNoBlock`). Si *no_block* es falso, importa el módulo "
-"convencionalmente (usando :c:func:`PyImport_ImportModule`)."
+"coincidir exactamente con esta cadena de caracteres."
 
 #: ../Doc/c-api/capsule.rst:108
 msgid ""
@@ -211,7 +207,7 @@ msgstr ""
 
 #: ../Doc/c-api/capsule.rst:111
 msgid "*no_block* has no effect anymore."
-msgstr ""
+msgstr "*no_block* ya no tiene efecto."
 
 #: ../Doc/c-api/capsule.rst:117
 msgid ""
