--- a/c-api/import.po
+++ b/c-api/import.po
@@ -416,8 +416,8 @@ msgid ""
 "could play tricks with this to provide a dynamically created collection of "
 "frozen modules."
 msgstr ""
-"Este puntero se inicializa para apuntar a un array de registros :c:type:"
-"`struct _frozen`, terminado por uno cuyos registros son todos ``NULL`` o "
+"Este puntero se inicializa para apuntar a un arreglo de registros :c:struct:"
+"`_frozen`, terminado por uno cuyos registros son todos ``NULL`` o "
 "cero. Cuando se importa un módulo congelado, se busca en esta tabla. El "
 "código de terceros podría jugar con esto para proporcionar una colección de "
 "módulos congelados creada dinámicamente."
