Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/buffer.po
+++ b/c-api/buffer.po
@@ -889,7 +889,7 @@ msgstr ""
 
 #: ../Doc/c-api/buffer.rst:507
 msgid "``0`` is returned on success, ``-1`` on error."
-msgstr "Se devuelve ``0`` en caso de éxito, ``-1`` en caso de error."
+msgstr "Se retorna ``0`` en caso de éxito, ``-1`` en caso de error."
 
 #: ../Doc/c-api/buffer.rst:511
 msgid ""
