Formatea con powrap

--- a/c-api/import.po
+++ b/c-api/import.po
@@ -417,10 +417,10 @@ msgid ""
 "frozen modules."
 msgstr ""
 "Este puntero se inicializa para apuntar a un arreglo de registros :c:struct:"
-"`_frozen`, terminado por uno cuyos registros son todos ``NULL`` o "
-"cero. Cuando se importa un módulo congelado, se busca en esta tabla. El "
-"código de terceros podría jugar con esto para proporcionar una colección de "
-"módulos congelados creada dinámicamente."
+"`_frozen`, terminado por uno cuyos registros son todos ``NULL`` o cero. "
+"Cuando se importa un módulo congelado, se busca en esta tabla. El código de "
+"terceros podría jugar con esto para proporcionar una colección de módulos "
+"congelados creada dinámicamente."
 
 #: ../Doc/c-api/import.rst:276
 msgid ""
