--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -714,7 +714,7 @@ msgid ""
 msgstr ""
 "Recupera la instancia de excepción activa, como la que devolvería :func:`sys."
 "exception`. Esto se refiere a una excepción que *ya fue capturada*, no a una "
-"excepción recién lanzada. Devuelve una nueva referencia a la excepción o "
+"excepción recién lanzada. Retorna una nueva referencia a la excepción o "
 "``NULL``. No modifica el estado de excepción del intérprete."
 
 #: ../Doc/c-api/exceptions.rst:472
